...
            return Date.isSameDay(date1: eventDate, date2: selectedDate)
        }
    }
    
    var body: some View {
        VStack(spacing: Constants.GatherlyCalendarView.vstackSpacing) {
            calendarMonthHeader
            
            SwiftUICalendarView(
                selectedDate: $selectedDate,
                events: allEvents,
                navigationState: navigationState
            )
...
                Button(action: {
                    isShowingDayEvents = true
                }) {
                    HStack {
                        Image(systemName: "list.bullet")
                        Text("View Events for \(selected.formatted(date: .abbreviated, time: .omitted))")
                            .accessibilityIdentifier("viewEventsForDateButton")
                    }
                    .font(.headline)
                    .foregroundColor(.white)
                    .padding()
                    .background(Color(Colors.primary))
                    .cornerRadius(Constants.GatherlyCalendarView.dayEventsViewButtonCornerRadius)
...
