...
    @Binding var description: String
    @FocusState private var isDescriptionFocused: Bool
    
    var body: some View {
        Section(header: Text(header)) {
            TextField("Title", text: $title)
                .accessibilityIdentifier("eventTitleTextField")
            
            HStack(alignment: .top) {
                TextField("Description", text: $description, axis: .vertical)
                    .accessibilityIdentifier("eventDescriptionTextField")
                    .lineLimit(3, reservesSpace: true)
                    .tint(Color(Colors.primary))
...
    let startTimeRange: ClosedRange<Date>
    let endTimeRange: ClosedRange<Date>
    
    var body: some View {
        Section(header: Text(header)) {
            DatePicker("Event Date", selection: eventDate, in: Date()..., displayedComponents: .date)
                .accessibilityIdentifier("eventDatePicker")
            
            DatePicker("Start Time", selection: startTime, in: startTimeRange, displayedComponents: .hourAndMinute)
                .accessibilityIdentifier("startTimePicker")
            
            DatePicker("End Time", selection: endTime, in: endTimeRange, displayedComponents: .hourAndMinute)
                .accessibilityIdentifier("endTimePicker")
...
