...
    
    // MARK: - Tabs
    
    var calendarTab: some View {
        CalendarView()
            .tabItem {
                Label("Calendar", systemImage: "calendar")
                    .labelStyle(.iconOnly)
            }
            .accessibilityIdentifier("calendarTab")
            .tag(Tab.calendar.rawValue)
    }
    
...
